# mac_chess

./: CMakeLists.txt
src/: chess.cpp  chess.h  main.cpp
